--- a/app-service/audit-appservice-plan-sku/audit-appservice-plan-sku.json
+++ b/app-service/audit-appservice-plan-sku/audit-appservice-plan-sku.json
@@ -1,40 +1,38 @@
 {
-    "mode": "All",
-    "policyRule": {
-        "if": {
-          "allOf": [
-            {
-              "field": "type",
-              "equals": "Microsoft.Web/serverfarms"
-            },
-            {
-              "field": "Microsoft.Web/serverfarms/sku.name",
-              "in": "[parameters('tiers')]"
-            }
-          ]
-        },
-        "then": {
-          "effect": "[parameters('effect')]"
-        }
+  "parameters": {
+    "effect": {
+      "type": "String",
+      "metadata": {
+        "displayName": "Effect",
+        "description": "Enable or disable the policy"
       },
-    "parameters": {
-        "tiers": {
+      "allowedValues": ["Deny", "Audit", "Disabled"],
+      "defaultValue": "Deny"
+    },
+    "skuName": {
           "type": "Array",
           "metadata": {
-            "description": "List of allowed or denied tiers for App Service Plans",
-            "displayName": "Tiers"
-          }
-        },
-        "effect": {
-          "type": "String",
-          "allowedValues": [
-            "Allow",
-            "Deny"
-          ],
-          "metadata": {
-            "description": "Deny or Allow the specified tiers",
-            "displayName": "Effect"
-          }
+            "description": "List of SKU names for App Service Plans to check.",
+            "displayName": "SKU names"
+          },
+          "defaultValue": ["P3V3", "P3V2","P2V2","P3V2","P3","P2"]
         }
-      }
+  },
+  "policyRule": {
+    "if": {
+      "allOf": [
+        {
+          "field": "type",
+          "equals": "Microsoft.Web/serverfarms"
+        },
+        {
+          "field": "Microsoft.Web/serverfarms/sku.name",
+          "in": "[parameters('skuName')]"
+        }
+      ]
+    },
+    "then": {
+      "effect": "[parameters('effect')]"
+    }
   }
+}
